Error Mitigation/MagiCoder/Data/javax_sound_midi/javax_sound_midiOutputResult.txt
Sample: MetaMessage_3
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MetaMessage_3.java:9: error: no suitable method found for setMessage(byte[])
            metaMessage.setMessage(new ShortMessage(ShortMessage.NOTE_ON, 0, 64, 100).getMessage());
                       ^
    method MidiMessage.setMessage(byte[],int) is not applicable
      (actual and formal argument lists differ in length)
    method MetaMessage.setMessage(int,byte[],int) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: MetaMessage_5
----------------------------------------------------------------
================================================================

Sample: MidiDevice_Info_2
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiDevice_Info_2.java:12: error: exception MidiUnavailableException is never thrown in body of corresponding try statement
        } catch (MidiUnavailableException e) {
          ^
1 error


================================================================

Sample: MidiDevice_Info_3
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiDevice_Info_3.java:12: error: exception MidiUnavailableException is never thrown in body of corresponding try statement
        } catch (MidiUnavailableException e) {
          ^
1 error


================================================================

Sample: MidiDevice_Info_4
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiDevice_Info_4.java:12: error: exception MidiUnavailableException is never thrown in body of corresponding try statement
        } catch (MidiUnavailableException e) {
          ^
1 error


================================================================

Sample: MidiDevice_Info_5
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiDevice_Info_5.java:16: error: exception MidiUnavailableException is never thrown in body of corresponding try statement
        } catch (MidiUnavailableException e) {
          ^
1 error


================================================================

Sample: MidiEvent_2
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiEvent_2.java:11: error: cannot find symbol
        } catch (InvalidMidiDataException e) {
                 ^
  symbol:   class InvalidMidiDataException
  location: class MidiEvent_2
1 error


================================================================

Sample: MidiEvent_3
----------------------------------------------------------------
stdout:
Tick: 1

================================================================

Sample: MidiEvent_5
----------------------------------------------------------------
stdout:
Tick: 500

================================================================

Sample: MidiFileFormat_3
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiFileFormat_3.java:5: error: no suitable constructor found for MidiFileFormat(no arguments)
        MidiFileFormat midiFileFormat = new MidiFileFormat();
                                        ^
    constructor MidiFileFormat.MidiFileFormat(int,float,int,int,long) is not applicable
      (actual and formal argument lists differ in length)
    constructor MidiFileFormat.MidiFileFormat(int,float,int,int,long,Map<String,Object>) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: MidiFileFormat_4
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/MidiFileFormat_4.java:5: error: no suitable constructor found for MidiFileFormat(no arguments)
        MidiFileFormat midiFileFormat = new MidiFileFormat();
                                        ^
    constructor MidiFileFormat.MidiFileFormat(int,float,int,int,long) is not applicable
      (actual and formal argument lists differ in length)
    constructor MidiFileFormat.MidiFileFormat(int,float,int,int,long,Map<String,Object>) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: MidiMessage_2
----------------------------------------------------------------
stdout:
Status: 145

================================================================

Sample: MidiMessage_3
----------------------------------------------------------------
stdout:
Length of the MidiMessage: 3

================================================================

Sample: MidiMessage_4
----------------------------------------------------------------
stdout:
-111 60 100 
================================================================

Sample: Sequence_2
----------------------------------------------------------------
stderr:
java.io.FileNotFoundException: path_to_your_midi_file.mid (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at java.desktop/com.sun.media.sound.StandardMidiFileReader.getSequence(StandardMidiFileReader.java:220)
	at java.desktop/javax.sound.midi.MidiSystem.getSequence(MidiSystem.java:821)
	at Sequence_2.main(Sequence_2.java:8)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: Sequence_3
----------------------------------------------------------------
stderr:
java.io.FileNotFoundException: path_to_your_midi_file.mid (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at java.desktop/com.sun.media.sound.StandardMidiFileReader.getSequence(StandardMidiFileReader.java:220)
	at java.desktop/javax.sound.midi.MidiSystem.getSequence(MidiSystem.java:821)
	at Sequence_3.main(Sequence_3.java:8)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: SysexMessage_2
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/SysexMessage_2.java:13: error: unreported exception InvalidMidiDataException; must be caught or declared to be thrown
            SysexMessage sysexMessage = new SysexMessage(data, 0);
                                        ^
1 error


================================================================

Sample: Track_2
----------------------------------------------------------------
output:
./Data/javax_sound_midi/javaFiles/Track_2.java:13: error: cannot find symbol
            track.add(new MidiEvent(new ShortMessage(ShortMessage.NOTE_ON, 60, 100), 0));
                                        ^
  symbol:   class ShortMessage
  location: class Track_2
./Data/javax_sound_midi/javaFiles/Track_2.java:13: error: cannot find symbol
            track.add(new MidiEvent(new ShortMessage(ShortMessage.NOTE_ON, 60, 100), 0));
                                                     ^
  symbol:   variable ShortMessage
  location: class Track_2
./Data/javax_sound_midi/javaFiles/Track_2.java:14: error: cannot find symbol
            track.add(new MidiEvent(new ShortMessage(ShortMessage.NOTE_OFF, 60, 100), 100));
                                        ^
  symbol:   class ShortMessage
  location: class Track_2
./Data/javax_sound_midi/javaFiles/Track_2.java:14: error: cannot find symbol
            track.add(new MidiEvent(new ShortMessage(ShortMessage.NOTE_OFF, 60, 100), 100));
                                                     ^
  symbol:   variable ShortMessage
  location: class Track_2
4 errors


================================================================

